--- a/YouTubeDL-UI/YouTubeDL-UI.csproj
+++ b/YouTubeDL-UI/YouTubeDL-UI.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandProcessor.cs" />
     <Compile Include="frmMetadata.cs">
       <SubType>Form</SubType>
     </Compile>
