Refactor unit test file names

--- a/CommandsTests/YouTubeDL-UI-Test.csproj
+++ b/CommandsTests/YouTubeDL-UI-Test.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2BDB1958-F6B8-4E51-B1E1-57AB56BE7AC3}</ProjectGuid>
+    <ProjectGuid>{E8005286-51F7-4D96-965F-981BD4DCFDC2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CommandsTests</RootNamespace>
@@ -49,8 +49,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandsTest.cs" />
+    <Compile Include="CommandProcessorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringHandlerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
