--- a/YouTubeDL-UI-Test/YouTubeDL-UI-Test.csproj
+++ b/YouTubeDL-UI-Test/YouTubeDL-UI-Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandProcessorTest.cs" />
+    <Compile Include="DownloadUITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHandlerTest.cs" />
   </ItemGroup>
