Refactor check dependencies method and add specified unit test

--- a/YouTubeDL-UI/YouTubeDL-UI.csproj
+++ b/YouTubeDL-UI/YouTubeDL-UI.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandProcessor.cs" />
+    <Compile Include="DownloadUI.cs" />
     <Compile Include="frmMetadata.cs">
       <SubType>Form</SubType>
     </Compile>
